src/objects/Scenario__c.object
<CustomObject><fields>
        <fullName>Average_Growth_Rate__c</fullName>
        <label>Average Growth Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>BarChartResponse__c</fullName>
        <label>BarChartResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>BayDocsOrderNumber__c</fullName>
        <label>BayDocsOrderNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CashFlow10__c</fullName>
        <label>CashFlow10</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>CashFlow1__c</fullName>
        <label>CashFlow1</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CashFlow5__c</fullName>
        <label>CashFlow5</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Cash_Flow_12_months_Amount__c</fullName>
        <label>Cash Flow 12 Months Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Cash_Flow_2_Month_Number__c</fullName>
        <label>Cash Flow 2 Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Cash_Flow_60_months_Amount__c</fullName>
        <label>Cash Flow 60 Months Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Cash_Flow_Remaining_Month__c</fullName>
        <label>Cash Flow Remaining Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Cash_Flow_Remaining_months_Amount__c</fullName>
        <label>Cash Flow Remaining Months Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Cash_at_close__c</fullName>
        <label>Cash at close</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Cash_to_close__c</fullName>
        <label>Cash to close</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ClientId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>ClientInfo__c</referenceTo>
        <relationshipLabel>Scenarios</relationshipLabel>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Client_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Scenarios</relationshipLabel>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Current_Mortgage_Balance__c</fullName>
        <label>Current Mortgage Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Current_Mortgage_Interest_Rate__c</fullName>
        <label>Current Mortgage Interest Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Desired_Origination_for_Adjustable_Rate__c</fullName>
        <label>Desired Origination for Adjustable Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>EOF__c</fullName>
        <label>EOF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Estimated_home_value__c</fullName>
        <label>Estimated Home Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Home_Value_10_years__c</fullName>
        <label>Home Value 10 Years</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Initial_Growth_Rate__c</fullName>
        <label>Initial Growth Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Line_of_Credit__c</fullName>
        <label>Line of Credit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>Scenarios</relationshipLabel>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>MIP__c</fullName>
        <label>MIP</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Monthly_Mortgage_Payment__c</fullName>
        <label>Monthly Mortgage Payment</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>ORMS_Number_of_Scenarios_Run__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ORMS Number of Scenarios Run</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ORM_AE__c</fullName>
        <description>This field is used for Reporting, this would give the related ORM AE on Scenario.</description>
        <formula>PartnerId__r.Contact.ORM_Account_Executive_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORM AE</label>
        <type>Text</type>
    </fields><fields>
        <fullName>PartnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>PieChartResponse__c</fullName>
        <label>PieChartResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Principal_Limit__c</fullName>
        <label>Principal Limit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RateType__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adjust</fullName>
                    <label>ARM</label>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Request_Scenario_Package_Count__c</fullName>
        <label>Request Scenario Package Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Scenario_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scenarios</relationshipLabel>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Scenario_Response__c</fullName>
        <label>Scenario Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Scenario_Type__c</fullName>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FHA Traditional HECM</fullName>
                </value>
                <value>
                    <fullName>HECM for Purchase</fullName>
                </value>
                <value>
                    <fullName>Hecm</fullName>
                    <isActive>false</isActive>
                    <label>Hecm</label>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                    <isActive>false</isActive>
                    <label>Purchase</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>is_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Converted</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Saved Scenario</label><nameField>
        <displayFormat>{0}</displayFormat>
        <label>ScenarioId</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Saved Scenarios</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All_Scenarios</fullName>
        <columns>NAME</columns>
        <columns>Client_Lead__c</columns>
        <columns>ClientId__c</columns>
        <columns>PartnerId__c</columns>
        <columns>Margin__c</columns>
        <columns>Estimated_home_value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ORM_AE__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>6/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>ORM_AE__c</field>
            <operation>greaterThan</operation>
        </filters>
        <label>All Scenarios</label>
    </listViews><listViews>
        <fullName>Saved_Scenarios_Last_month</fullName>
        <columns>NAME</columns>
        <columns>Loan__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ORM_AE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Saved Scenarios Last month</label>
    </listViews><sharingReasons>
        <fullName>Executive__c</fullName>
        <label>Executive</label>
    </sharingReasons><sharingReasons>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
    </sharingReasons></CustomObject>